--- a/integration-test/sample-app/src/test/resources/application-it.properties
+++ b/integration-test/sample-app/src/test/resources/application-it.properties
@@ -1,3 +1,3 @@
 # Application
 environment=it
-application.api.url=https://it-sample-app-jiadchen-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
+application.api.url=https://it-sample-app-jiadchen-dev.apps.rm3.7wse.p1.openshiftapps.com
